@@ -1,3 +1,8 @@
+Sat May 19 14:40:49 2012  Tanaka Akira  <akr@fsij.org>
+
+	* lib/drb/ssl.rb: close accepted TCP socket if SSL accept is failed.
+	  [ruby-dev:45541]
+
 Sat May 19 14:39:50 2012  Tanaka Akira  <akr@fsij.org>
 
 	* lib/webrick/utils.rb: fix fcntl call.
